# tap-bigquery

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
target_bigquery/: batch_job.py  core.py  gcs_stage.py  proto_gen.py  storage_write.py  streaming_insert.py  target.py
target_bigquery/tests/: test_core.py  test_utils.py
