[project]
name = "z3-target-bigquery"
version = "0.7.2"
description = "z3-target-bigquery is a Singer target for BigQuery. It supports storage write, GCS, streaming, and batch load methods. Built with the Meltano SDK."
authors = [{ name = "Alex Butler", email = "butler.alex2010@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13.5,<3.14"
keywords = ["ELT", "BigQuery"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "requests>=2.32.0",
  "singer-sdk>=0.40.0,<0.54",
  "google-cloud-bigquery[bqstorage]>=3.25.0,<4",
  "orjson>=3.8.0,<4",
  "tenacity>=8.0.1,<10",
  "grpcio-tools>=1.65.0,<2",
  "google-cloud-storage>=2.7.0,<4",
  "grpcio-status>=1.65.0,<2",
]

[project.urls]
Homepage = "https://github.com/z3z1ma/target-bigquery"
Repository = "https://github.com/z3z1ma/target-bigquery"

[project.scripts]
target-bigquery = "target_bigquery.target:TargetBigQuery.cli"

[dependency-groups]
dev = [
  "pytest>=8.3,<10",
  "black>=24.0,<25",
  "mypy>=1.11,<2",
  "isort>=5.13,<6",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["target_bigquery*"]

[tool.black]
line-length = 100
target-version = ["py313"]
preview = true

[tool.isort]
color_output = true
line_length = 100
profile = "black"
src_paths = "target_bigquery"
